working on create booking form 3

--- a/src/features/bookings/datePicker/datePicker.css
+++ b/src/features/bookings/datePicker/datePicker.css
@@ -1,6 +1,5 @@
-.datePickerStyle {}
-
-.calendarStyle {}
+/* .datePickerStyle {}
+.calendarStyle {} */
 
 .react-date-picker__wrapper {
   font-family: 'Poppins', sans-serif;
