--- a/src/features/bookings/datePicker/datePicker.css
+++ b/src/features/bookings/datePicker/datePicker.css
@@ -62,6 +62,31 @@ input:focus, button:focus, textarea:focus, select:focus {
   box-shadow: var(--shadow-sm);
 }
 
+@media all and (max-width: 768px) {
+  .react-date-picker__calendar .react-calendar {
+    width: 275px;
+  }
+}
+
+@media all and (max-width: 480px) {
+  .react-date-picker__calendar .react-calendar {
+    width: 250px;
+  }
+}
+
+@media all and (max-width: 360px) {
+  .react-date-picker__calendar .react-calendar {
+    width: 210px;
+  }
+}
+
+.react-date-picker__calendar {
+  width: 350px;
+  max-width: 100vw;
+  z-index: 1;
+  height: 230px;
+}
+
 .react-calendar__navigation {
   display: flex;
   height: 4rem;
